DB added for schudle API

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Application port no
-PORT=3000
+PORT=3001
 
 # DB access credentials
-#DB_HOST=localhost
-#DB_PORT=3306
-#DB_NAME=dbname
-#DB_USER=username
-#DB_PASSWORD=password
+DB_HOST=d72605.mysql.zonevs.eu
+DB_PORT=3306
+DB_NAME=d72605_rmlwebtest
+DB_USER=d72605_rmlwebtes
+DB_PASSWORD=Wf*SHa845YoOyX93eW4$b
 
 # Session access credentials
 #SESSION_SECRET=secret
