Add, edit schedule, api updated

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST=d72605.mysql.zonevs.eu
 DB_PORT=3306
 DB_NAME=d72605_rmlwebtest
 DB_USER=d72605_rmlwebtes
-DB_PASSWORD=Wf*SHa845YoOyX93eW4$b
+DB_PASSWORD=l&MWm8&!A06ET1Fb1cNwv
 
 # Session access credentials
 #SESSION_SECRET=secret
