--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "author": "Reino Ristissaar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
