--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "dotenv": "^10.0.0",
+    "download": "^8.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "eyes": "^0.1.8",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.15",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0"
   }
 }
