--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ config.js
 # PDF files
 *.pdf
 
+# PHP files
+*.php
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
