--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "eyes": "^0.1.8",
+    "helmet": "^5.1.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "morgan": "^1.10.0",
