--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "download": "^8.0.0",
     "ejs": "^3.1.6",
